// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="layout-row layout-align-center-center loader_box"
>
  <div
    className="layout-column layout-align-center-center loader"
  >
    <styled.img />
    <div
      className="flex-none layout-row layout-align-space-between-center dot_row"
    >
      <styled.div
        delay={3}
        key="RANDOM_KEY_0"
      />
      <styled.div
        delay={2}
        key="RANDOM_KEY_1"
      />
      <styled.div
        delay={1}
        key="RANDOM_KEY_2"
      />
      <styled.div
        delay={0}
        key="RANDOM_KEY_3"
      />
    </div>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="layout-row layout-align-center-center loader_box"
>
  <div
    className="layout-column layout-align-center-center loader"
  >
    <styled.img />
    <div
      className="flex-none layout-row layout-align-space-between-center dot_row"
    >
      <styled.div
        delay={3}
        key="RANDOM_KEY_4"
      />
      <styled.div
        delay={2}
        key="RANDOM_KEY_5"
      />
      <styled.div
        delay={1}
        key="RANDOM_KEY_6"
      />
      <styled.div
        delay={0}
        key="RANDOM_KEY_7"
      />
    </div>
  </div>
</div>
`;

exports[`theme.logoLarge is truthy 1`] = `
<div
  className="layout-row layout-align-center-center loader_box"
>
  <div
    className="layout-column layout-align-center-center loader"
  >
    <styled.img />
    <div
      className="flex-none layout-row layout-align-space-between-center dot_row"
    >
      <styled.div
        delay={3}
        key="RANDOM_KEY_8"
      />
      <styled.div
        delay={2}
        key="RANDOM_KEY_9"
      />
      <styled.div
        delay={1}
        key="RANDOM_KEY_10"
      />
      <styled.div
        delay={0}
        key="RANDOM_KEY_11"
      />
    </div>
  </div>
</div>
`;
